# ipc2dsim

./: .gitignore  CMakeLists.txt  Object.cpp  Object.h  camera.h  dev.cpp  macros.h  main.cpp  modelInit.cpp  modelInit.h  neoHookeanCalc.cpp  neoHookeanCalc.h  phyScene.cpp  phyScene.h  readme.md  renderinit.cpp  renderinit.h  repulsionCalc.cpp  repulsionCalc.h  shader.cpp  shader.h  utils.h  world.cpp  world.h
Energy/: barrier.h  elasticity.h  gravity.cpp  gravity.h  inertia.h  sparseMatrix.h  spring.h
model/: 1tri1cube.xyz  2cubes.xyz  2triangles.xyz  bent.xyz  cube.xyz  pier.xyz  rabbit.xyz  symsquare.xyz  tetrahedron.xyz  yBarrier.xyz
shaders/: barrier.fs  fragment.fs  vertex.vs
tight_inclusion/: avx.hpp  ccd.cpp  ccd.hpp  config.hpp  interval.hpp  interval_root_finder.cpp  interval_root_finder.hpp  timer.hpp  types.hpp
